apps/productivity/bookmarks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmarks
  namespace: bookmarks
  labels:
    app: bookmarks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmarks
  template:
    metadata:
      labels:
        app: bookmarks
    spec:
      containers:
        - name: bookmarks
          # Flux Image Automation will maintain this tag via setter below
          image: ghcr.io/chad-russell/bookmark:v0.1.0 # {"$imagepolicy": "flux-system:bookmarks"}
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: bookmarks
  namespace: bookmarks
  labels:
    app: bookmarks
spec:
  selector:
    app: bookmarks
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
